<resources>
    <string name="app_name">Calculadora de IMC 1.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titulo">Calculadora de IMC</string>
    <string name="nome">Nome: </string>
    <string name="peso">Peso(kg): </string>
    <string name="altura">Altura(m): </string>
    <string name="calcular">Calcular IMC</string>
    <string name="saudacao">Olá </string>
    <string name="title_activity_resultado">Resultado</string>

</resources>
