<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/titulo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edTxtNome"
        android:layout_alignBottom="@+id/edTxtNome"
        android:layout_marginBottom="10dp"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/edTxtNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtTitulo"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edTxtPeso"
        android:layout_alignBottom="@+id/edTxtPeso"
        android:layout_marginBottom="10dp"
        android:text="@string/peso" />

    <EditText
        android:id="@+id/edTxtPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edTxtNome"
        android:inputType="numberDecimal"
        android:ems="10" />

    <TextView
        android:id="@+id/txtAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edTxtAltura"
        android:layout_alignBottom="@+id/edTxtAltura"
        android:layout_marginBottom="10dp"
        android:text="@string/altura" />

    <EditText
        android:id="@+id/edTxtAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtPeso"
        android:inputType="numberDecimal"
        android:ems="10" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edTxtAltura"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="abrirTelaResultado"
        android:text="@string/calcular" />

</RelativeLayout>
